--- a/src/apps/web/src/app/[locale]/globals.css
+++ b/src/apps/web/src/app/[locale]/globals.css
@@ -1,8 +1,15 @@
 .bg-hero {
-  background-image: url('../../assets/hero.jpg');
+  background-image: url("../../assets/hero.jpg");
   background-size: cover;
   background-color: rgba(255, 255, 255, 0.06);
   background-blend-mode: lighten;
   background-repeat: no-repeat;
 }
 
+.bg-hero-tours {
+  background-image: url("../../assets/hero_tours.jpg");
+  background-size: cover;
+  background-color: rgba(255, 255, 255, 0.06);
+  background-blend-mode: lighten;
+  background-repeat: no-repeat;
+}
